fix home avatar: scale blob-wrap to 15rem so image is always round and animations wrap correctly

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -149,11 +149,10 @@
 /* ---------- Avatar blob animation ---------- */
 .avatar-blob-wrap {
   position: relative;
-  width: 10rem;
-  height: 10rem;
+  width: 15rem;
+  height: 15rem;
   border-radius: 100%;
   contain: layout style;
-  overflow: hidden;
 }
 
 .avatar-blob {
